--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' gulp run-server"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
+    "gulp-nodemon": "^2.2.1",
     "rxjs": "~6.2.0",
     "socket.io": "^2.1.1",
     "zone.js": "~0.8.26"
@@ -33,11 +35,14 @@
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/express": "^4.16.0",
+    "@types/gulp": "^4.0.5",
+    "@types/gulp-nodemon": "0.0.32",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "@types/socket.io": "^1.4.38",
     "codelyzer": "~4.3.0",
+    "gulp": "^3.9.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -47,7 +52,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^4.1.0",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "^7.0.1",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
