--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,20 +10,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
     "paths": {
-      "rxjs-socket-service": [
-        "dist/rxjs-socket-service"
-      ],
-      "rxjs-socket-service/*": [
-        "dist/rxjs-socket-service/*"
-      ]
+      "rxjs-socket-service": ["dist/rxjs-socket-service"],
+      "rxjs-socket-service/*": ["dist/rxjs-socket-service/*"]
     }
   }
 }
