--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "jest": "jest",
+    "jest:watch": "jest --watch",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -36,6 +38,7 @@
     "@types/gulp-nodemon": "0.0.32",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^23.3.2",
     "@types/node": "~8.9.4",
     "@types/socket.io": "^1.4.38",
     "codelyzer": "~4.3.0",
@@ -44,6 +47,8 @@
     "gulp-nodemon": "^2.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^23.6.0",
+    "jest-preset-angular": "^6.0.1",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
@@ -57,5 +62,9 @@
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupTestFrameworkScriptFile": "<rootDir>/src/setupJest.ts"
+  }
 }
